--- a/about.html
+++ b/about.html
@@ -7,12 +7,13 @@
     <title>Sobre Nós</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
+    <link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-white shadow" style="height: 100px;">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#" style="padding-left: 150px;">Agrotherapy</a>
+            <img style="padding-left: 150px;" src="logo_head.svg" alt="Logo">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -40,7 +41,7 @@
     <div class="container hero-section">
         <div class="row align-items-center my-5">
             <div class="w-100 d-flex justify-content-center mb-5">
-                <div class="justify-content-center text-lg-start text-success w-50" style="font-size: 46px;">Nós criamos oportunidades para o produtor rural e protagonismo para crianças.</div>
+                <div class="justify-content-center text-lg-start section-title w-50" style="font-size: 46px;">Nós criamos oportunidades para o produtor rural e protagonismo para crianças.</div>
             </div>
             <div class="col-lg-7 hero-text">
                 <p class="mb-3">No AgroTherapy, acreditamos no poder transformador do campo para promover bem-estar e desenvolvimento.</p>
