--- a/contact-us.html
+++ b/contact-us.html
@@ -7,12 +7,13 @@
     <title>Fale Conosco</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
+    <link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-white shadow" style="height: 100px;">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#" style="padding-left: 150px;">Agrotherapy</a>
+            <img style="padding-left: 150px;" src="logo_head.svg" alt="Logo">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
