--- a/get-in.html
+++ b/get-in.html
@@ -7,12 +7,13 @@
     <title>Faça Parte</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
+    <link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-white shadow">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#" style="padding-left: 150px;">Agrotherapy</a>
+            <img style="padding-left: 150px;" src="logo_head.svg" alt="Logo">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -36,6 +37,32 @@
             </div>
         </div>
     </nav>
+
+    <div class="container my-5">
+        <h2 class="section-title">Faça Parte</h2>
+    
+        <div class="row align-items-center content-section">
+            <div class="col-lg-7">
+                <p class="section-heading">PARA PRODUTORES</p>
+                <h3 class="section-subtitle">Tenha uma Renda Extra</h3>
+                <p class="section-text">Transforme sua propriedade em um espaço de acolhimento para famílias e aumente sua renda com o AgroTherapy. Ofereça um ambiente natural onde crianças podem explorar e se desenvolver, enquanto você valoriza seu trabalho e contribui para uma causa de impacto. Com suporte da nossa equipe, você abre as portas do seu campo para uma experiência transformadora para todos.</p>
+            </div>
+            <div class="col-lg-5 text-center">
+                <img src="get_in_1.svg" alt="Imagem de produtor rural" class="img-fluid rounded">
+            </div>
+        </div>
+    
+        <div class="row align-items-center content-section">
+            <div class="col-lg-5 text-center">
+                <img src="get_in_2.svg" alt="Imagem de família no campo" class="img-fluid rounded">
+            </div>
+            <div class="col-lg-7">
+                <p class="section-heading">PARA FAMÍLIAS</p>
+                <h3 class="section-subtitle">Um Campo para Crescer</h3>
+                <p class="section-text">Proporcione à sua criança um espaço natural de desenvolvimento. No AgroTherapy, conectamos sua família a propriedades rurais adaptadas para estimular o crescimento e o bem-estar em contato com a natureza. Faça parte dessa rede e descubra o poder transformador do campo!</p>
+            </div>
+        </div>
+    </div>
 
     <footer>
         <div class="bg-success bg-gradient d-flex justify-content-center text-white" style="height: 300px;">
