--- a/home.html
+++ b/home.html
@@ -37,56 +37,57 @@
             </div>
         </div>
     </nav>
-
     <div>
         <img class="w-100" src="background_animals.svg" alt="">
-        <h2 class="text-center m-5">Propriedades Rurais em Destaque</h2>
-        <div class="row justify-content-center mb-5" style="margin: 0px 275px 0px 275px;">
-            <!-- Card 1 -->
-            <div class="col-md-3 mb-4">
-                <div class="card">
-                    <img src="sitio-feliz.svg" class="card-img-top" alt="Sítio Feliz">
-                    <div class="card-body text-center">
-                        <h5 class="card-title">Sítio Feliz</h5>
-                        <p class="card-subtitle text-muted">Sub Title</p>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="btn btn-primary">Agendar</a>
+        <div class="container">
+            <h2 class="text-center m-5">Propriedades Rurais em Destaque</h2>
+            <div class="row justify-content-center mb-5" >
+                <!-- Card 1 -->
+                <div class="col-md-3 mb-4">
+                    <div class="card">
+                        <img src="sitio-feliz.svg" class="card-img-top" alt="Sítio Feliz">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Sítio Feliz</h5>
+                            <p class="card-subtitle text-muted">Sub Title</p>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Agendar</a>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <!-- Card 2 -->
-            <div class="col-md-3 mb-4">
-                <div class="card">
-                    <img src="rancho-azul.svg" class="card-img-top" alt="Rancho Azul">
-                    <div class="card-body text-center">
-                        <h5 class="card-title">Rancho Azul</h5>
-                        <p class="card-subtitle text-muted">Sub Title</p>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="btn btn-primary">Agendar</a>
+                <!-- Card 2 -->
+                <div class="col-md-3 mb-4">
+                    <div class="card">
+                        <img src="rancho-azul.svg" class="card-img-top" alt="Rancho Azul">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Rancho Azul</h5>
+                            <p class="card-subtitle text-muted">Sub Title</p>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Agendar</a>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <!-- Card 3 -->
-            <div class="col-md-3 mb-4">
-                <div class="card">
-                    <img src="recanto-rural.svg" class="card-img-top" alt="Recanto Rural">
-                    <div class="card-body text-center">
-                        <h5 class="card-title">Recanto Rural</h5>
-                        <p class="card-subtitle text-muted">Sub Title</p>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="btn btn-primary">Agendar</a>
+                <!-- Card 3 -->
+                <div class="col-md-3 mb-4">
+                    <div class="card">
+                        <img src="recanto-rural.svg" class="card-img-top" alt="Recanto Rural">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Recanto Rural</h5>
+                            <p class="card-subtitle text-muted">Sub Title</p>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Agendar</a>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <!-- Card 4 (Highlight) -->
-            <div class="col-md-3 mb-4">
-                <div class="card highlighted-card">
-                    <img src="fazenda-do-lago.svg" class="card-img-top" alt="Fazenda do Lago">
-                    <div class="card-body text-center">
-                        <h5 class="card-title">Fazenda do Lago</h5>
-                        <p class="card-subtitle text-muted">Sub Title</p>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="btn btn-primary">Agendar</a>
+                <!-- Card 4 (Highlight) -->
+                <div class="col-md-3 mb-4">
+                    <div class="card highlighted-card">
+                        <img src="fazenda-do-lago.svg" class="card-img-top" alt="Fazenda do Lago">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Fazenda do Lago</h5>
+                            <p class="card-subtitle text-muted">Sub Title</p>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Agendar</a>
+                        </div>
                     </div>
                 </div>
             </div>
