--- a/home.html
+++ b/home.html
@@ -41,7 +41,7 @@
         <img class="w-100" src="background_animals.svg" alt="">
         <div class="container">
             <h2 class="text-center m-5">Propriedades Rurais em Destaque</h2>
-            <div class="row justify-content-center mb-5" >
+            <div class="row">
                 <!-- Card 1 -->
                 <div class="col-md-3 mb-4">
                     <div class="card">
