make cards responsive

--- a/home.html
+++ b/home.html
@@ -43,7 +43,7 @@
             <h2 class="text-center m-5">Propriedades Rurais em Destaque</h2>
             <div class="row">
                 <!-- Card 1 -->
-                <div class="col-md-3 mb-4">
+                <div class="col-12 col-sm-6 col-lg-3">
                     <div class="card">
                         <img src="sitio-feliz.svg" class="card-img-top" alt="Sítio Feliz">
                         <div class="card-body text-center">
@@ -55,7 +55,7 @@
                     </div>
                 </div>
                 <!-- Card 2 -->
-                <div class="col-md-3 mb-4">
+                <div class="col-12 col-sm-6 col-lg-3">
                     <div class="card">
                         <img src="rancho-azul.svg" class="card-img-top" alt="Rancho Azul">
                         <div class="card-body text-center">
@@ -67,7 +67,7 @@
                     </div>
                 </div>
                 <!-- Card 3 -->
-                <div class="col-md-3 mb-4">
+                <div class="col-12 col-sm-6 col-lg-3">
                     <div class="card">
                         <img src="recanto-rural.svg" class="card-img-top" alt="Recanto Rural">
                         <div class="card-body text-center">
@@ -79,7 +79,7 @@
                     </div>
                 </div>
                 <!-- Card 4 (Highlight) -->
-                <div class="col-md-3 mb-4">
+                <div class="col-12 col-sm-6 col-lg-3">
                     <div class="card highlighted-card">
                         <img src="fazenda-do-lago.svg" class="card-img-top" alt="Fazenda do Lago">
                         <div class="card-body text-center">
