--- a/home.html
+++ b/home.html
@@ -39,9 +39,9 @@
     </nav>
     <div>
         <img class="w-100" src="background_animals.svg" alt="">
-        <div class="container">
+        <div class="container m-5">
             <h2 class="text-center m-5">Propriedades Rurais em Destaque</h2>
-            <div class="row">
+            <div class="row g-4">
                 <!-- Card 1 -->
                 <div class="col-12 col-sm-6 col-lg-3">
                     <div class="card">
