fix mobile margin

--- a/home.html
+++ b/home.html
@@ -39,7 +39,7 @@
     </nav>
     <div>
         <img class="w-100" src="background_animals.svg" alt="">
-        <div class="container m-5">
+        <div class="container mb-5">
             <h2 class="text-center m-5">Propriedades Rurais em Destaque</h2>
             <div class="row g-4">
                 <!-- Card 1 -->
