--- a/get-in.html
+++ b/get-in.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-white shadow">
+    <nav class="navbar navbar-expand-lg navbar-light bg-white shadow sticky-top">
         <div class="container-fluid">
             <img style="padding-left: 150px;" src="logo_head.svg" alt="Logo">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
