--- a/home.html
+++ b/home.html
@@ -73,8 +73,8 @@
                     <img src="sitio-feliz.svg" class="card-img-top" alt="Sítio Feliz">
                     <div class="card-body">
                         <h5 class="card-title">Sítio Feliz</h5>
-                        <p class="card-subtitle text-muted">Sub Title</p>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <p class="card-subtitle text-muted">Fazendinha</p>
+                        <p class="card-text">Um espaço lúdico e acolhedor onde crianças para descobrir o mundo rural e os animais da fazenda.</p>
                         <a href="#" class="btn btn-primary">Agendar</a>
                     </div>
                 </div>
@@ -85,8 +85,8 @@
                     <img src="rancho-azul.svg" class="card-img-top" alt="Rancho Azul">
                     <div class="card-body">
                         <h5 class="card-title">Rancho Azul</h5>
-                        <p class="card-subtitle text-muted">Sub Title</p>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <p class="card-subtitle text-muted">Equoterapia</p>
+                        <p class="card-text">Especializado em terapias com cavalos, aqui crianças desenvolvem coordenação e autoconfiança.</p>
                         <a href="#" class="btn btn-primary">Agendar</a>
                     </div>
                 </div>
@@ -97,8 +97,8 @@
                     <img src="recanto-rural.svg" class="card-img-top" alt="Recanto Rural">
                     <div class="card-body">
                         <h5 class="card-title">Recanto Rural</h5>
-                        <p class="card-subtitle text-muted">Sub Title</p>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <p class="card-subtitle text-muted">Platanção</p>
+                        <p class="card-text">Aqui você vai encontrar cultivo de hortas e jardins sensoriais, desenvolvendo várias habilidades.</p>
                         <a href="#" class="btn btn-primary">Agendar</a>
                     </div>
                 </div>
@@ -109,8 +109,8 @@
                     <img src="fazenda-do-lago.svg" class="card-img-top" alt="Fazenda do Lago">
                     <div class="card-body">
                         <h5 class="card-title">Fazenda do Lago</h5>
-                        <p class="card-subtitle text-muted">Sub Title</p>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <p class="card-subtitle text-muted">Hidroterapia</p>
+                        <p class="card-text">Terapias aquáticas com a vida rural, permitindo que as crianças se desenvolva no nosso lago.</p>
                         <a href="#" class="btn btn-primary">Agendar</a>
                     </div>
                 </div>
