fix text center

--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
     <div class="container hero-section">
         <div class="row align-items-center my-5">
             <div class="w-100 d-flex justify-content-center mb-5">
-                <div class="justify-content-center text-lg-start section-title w-50" style="font-size: 46px;">Nós criamos oportunidades para o produtor rural e protagonismo para crianças.</div>
+                <div class="justify-content-center text-lg-start section-title w-50" style="font-size: 46px;"><p class="text-center">Nós criamos oportunidades para o produtor rural e protagonismo para crianças.</p></div>
             </div>
             <div class="col-lg-7 hero-text">
                 <p class="mb-3">No AgroTherapy, acreditamos no poder transformador do campo para promover bem-estar e desenvolvimento.</p>
