--- a/home.html
+++ b/home.html
@@ -12,34 +12,33 @@
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-white shadow sticky-top">
-        <div class="container-fluid">
-            <img style="padding-left: 150px;" src="logo_head.svg" alt="Logo">
+        <div class="container">
+            <a class="navbar-brand" href="#">
+                <img src="logo_head.svg" alt="Logo">
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="d-flex justify-content-end" style="padding-right: 150px;">
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item p-2">
-                            <a class="nav-link active" aria-current="page" href="home.html">Início</a>
-                        </li>
-                        <li class="nav-item p-2">
-                            <a class="nav-link" href="about.html">Sobre Nós</a>
-                        </li>
-                        <li class="nav-item p-2">
-                            <a class="nav-link" href="contact-us.html">Fale Conosco</a>
-                        </li>
-                        <li class="nav-item p-2 bg-success bg-gradient rounded">
-                            <a class="nav-link text-white" href="get-in.html">Faça Parte</a>
-                        </li>
-                    </ul>
-                </div>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav align-items-center">
+                    <li class="nav-item">
+                        <a class="nav-link active px-3" aria-current="page" href="home.html">Início</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link px-3" href="about.html">Sobre Nós</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link px-3" href="contact-us.html">Fale Conosco</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link px-3 bg-success bg-gradient rounded text-white ms-2" href="get-in.html">Faça Parte</a>
+                    </li>
+                </ul>
             </div>
         </div>
     </nav>
-    <div>
         
-    <div class="hero position-relative section-height mb-4">
+    <main class="hero position-relative section-height mb-4">
         <img class="w-100 h-100 position-absolute object-fit-cover" src="background_animals.svg" alt="">
         
         <div class="position-absolute w-100 h-100 bg-dark opacity-50"></div>
@@ -62,9 +61,9 @@
                 </div>
             </div>
         </div>
-    </div>
+    </main>
 
-    <main class="container mb-5">
+    <section class="container mb-5">
         <h2 class="text-center m-5">Propriedades Rurais em Destaque</h2>
         <div class="row g-4">
             <!-- Card 1 -->
@@ -116,7 +115,7 @@
                 </div>
             </div>
         </div>
-    </main>
+    </section>
 
     <footer>
         <div class="bg-success bg-gradient d-flex justify-content-center text-white" style="height: 200px;">
