html semantic tags

--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
         </div>
     </nav>
 
-    <div class="container hero-section">
+    <main class="container hero-section">
         <div class="row align-items-center my-5">
             <div class="w-100 d-flex justify-content-center mb-5">
                 <div class="justify-content-center text-lg-start section-title w-50" style="font-size: 46px;"><p class="text-center">Nós criamos oportunidades para o produtor rural e protagonismo para crianças.</p></div>
@@ -54,7 +54,7 @@
                 <img src="horse.svg" alt="Imagem de crianças com cavalo" class="img-fluid rounded">
             </div>
         </div>
-    </div>
+    </main>
 
     <footer>
         <div class="bg-success bg-gradient d-flex justify-content-center text-white" style="height: 200px;">
