--- a/get-in.html
+++ b/get-in.html
@@ -38,7 +38,7 @@
         </div>
     </nav>
 
-    <div class="container my-5">
+    <main class="container my-5">
         <h2 class="section-title">Faça Parte</h2>
     
         <div class="row align-items-center content-section">
@@ -62,7 +62,7 @@
                 <p class="section-text">Proporcione à sua criança um espaço natural de desenvolvimento. No AgroTherapy, conectamos sua família a propriedades rurais adaptadas para estimular o crescimento e o bem-estar em contato com a natureza. Faça parte dessa rede e descubra o poder transformador do campo!</p>
             </div>
         </div>
-    </div>
+    </main>
 
     <footer>
         <div class="bg-success bg-gradient d-flex justify-content-center text-white" style="height: 200px;">
