--- a/contact-us.html
+++ b/contact-us.html
@@ -37,8 +37,8 @@
             </div>
         </div>
     </nav>
-    <!-- Conteúdo da Página Fale Conosco -->
-    <div class="container mt-4">
+
+    <main class="container mt-4">
         <h1>Fale Conosco</h1>
         <form>
             <div class="mb-3">
@@ -55,7 +55,7 @@
             </div>
             <button type="submit" class="btn btn-primary">Enviar</button>
         </form>
-    </div>
+    </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
