--- a/contact-us.html
+++ b/contact-us.html
@@ -22,13 +22,13 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav align-items-center">
                     <li class="nav-item">
-                        <a class="nav-link active px-3" aria-current="page" href="home.html">Início</a>
+                        <a class="nav-link px-3" href="home.html">Início</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link px-3" href="about.html">Sobre Nós</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link px-3" href="contact-us.html">Fale Conosco</a>
+                        <a class="nav-link active px-3" aria-current="page" href="contact-us.html">Fale Conosco</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link px-3 bg-success bg-gradient rounded text-white ms-2" href="get-in.html">Faça Parte</a>
@@ -40,23 +40,45 @@
 
     <main class="container mt-4">
         <h1>Fale Conosco</h1>
-        <form>
-            <div class="mb-3">
-                <label for="nome" class="form-label">Nome</label>
-                <input type="text" class="form-control" id="nome">
-            </div>
-            <div class="mb-3">
-                <label for="email" class="form-label">Email</label>
-                <input type="email" class="form-control" id="email">
-            </div>
-            <div class="mb-3">
-                <label for="mensagem" class="form-label">Mensagem</label>
-                <textarea class="form-control" id="mensagem" rows="3"></textarea>
-            </div>
-            <button type="submit" class="btn btn-primary">Enviar</button>
-        </form>
+        
+        <div class="alert alert-success d-none" id="successMessage" role="alert">
+            <h4 class="alert-heading">Mensagem enviada com sucesso!</h4>
+            <p>Recebemos sua mensagem com os seguintes dados:</p>
+            <hr>
+            <p class="mb-0"><strong>Nome:</strong> <span id="confirmedName"></span></p>
+            <p class="mb-0"><strong>Email:</strong> <span id="confirmedEmail"></span></p>
+            <p class="mb-0"><strong>Mensagem:</strong> <span id="confirmedMessage"></span></p>
+        </div>
+
+        <div id="formContainer">
+            <form class="needs-validation" novalidate id="contactForm">
+                <div class="mb-3">
+                    <label for="nome" class="form-label">Nome</label>
+                    <input type="text" class="form-control" id="nome" required minlength="3">
+                    <div class="invalid-feedback">
+                        Por favor, insira seu nome (mínimo 3 caracteres)
+                    </div>
+                </div>
+                <div class="mb-3">
+                    <label for="email" class="form-label">Email</label>
+                    <input type="email" class="form-control" id="email" required>
+                    <div class="invalid-feedback">
+                        Por favor, insira um email válido
+                    </div>
+                </div>
+                <div class="mb-3">
+                    <label for="mensagem" class="form-label">Mensagem</label>
+                    <textarea class="form-control" id="mensagem" rows="3" required minlength="10"></textarea>
+                    <div class="invalid-feedback">
+                        Por favor, insira uma mensagem com pelo menos 10 caracteres
+                    </div>
+                </div>
+                <button type="submit" class="btn btn-success">Enviar</button>
+            </form>
+        </div>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="form.js"></script>
 </body>
 </html>
