--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Sobre Nós</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="assets/css/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -14,7 +14,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white shadow sticky-top">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="logo_head.svg" alt="Logo">
+                <img src="assets/images/logo_head.svg" alt="Logo">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -22,7 +22,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav align-items-center">
                     <li class="nav-item">
-                        <a class="nav-link active px-3" aria-current="page" href="home.html">Início</a>
+                        <a class="nav-link active px-3" aria-current="page" href="index.html">Início</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link px-3" href="about.html">Sobre Nós</a>
@@ -51,7 +51,7 @@
                 <p class="mb-3">Nossa missão é fomentar uma experiência única e significativa, onde cada propriedade rural se torna um ponto de impacto positivo, fortalecendo comunidades e contribuindo para um futuro mais inclusivo e sustentável.</p>
             </div>
             <div class="col-lg-5 text-center">
-                <img src="horse.svg" alt="Imagem de crianças com cavalo" class="img-fluid rounded">
+                <img src="assets/images/horse.svg" alt="Imagem de crianças com cavalo" class="img-fluid rounded">
             </div>
         </div>
     </main>
@@ -59,7 +59,7 @@
     <footer>
         <div class="bg-success bg-gradient d-flex justify-content-center text-white" style="height: 200px;">
             <div class="align-self-center justify-content-center">
-                <img style="margin-left: 78px;" src="logo.svg" alt="">
+                <img style="margin-left: 78px;" src="assets/images/logo.svg" alt="">
                 <div>
                     Cultivando um futuro mais inclusivo
                 </div>
