--- a/contact-us.html
+++ b/contact-us.html
@@ -14,7 +14,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white shadow sticky-top">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="logo_head.svg" alt="Logo">
+                <img src="assets/images/logo_head.svg" alt="Logo">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -22,7 +22,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav align-items-center">
                     <li class="nav-item">
-                        <a class="nav-link px-3" href="home.html">Início</a>
+                        <a class="nav-link px-3" href="index.html">Início</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link px-3" href="about.html">Sobre Nós</a>
@@ -79,6 +79,6 @@
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="form.js"></script>
+    <script src="assets/js/form.js"></script>
 </body>
 </html>
