make contact-us page prettier

--- a/contact-us.html
+++ b/contact-us.html
@@ -38,8 +38,8 @@
         </div>
     </nav>
 
-    <main class="container mt-4">
-        <h1>Fale Conosco</h1>
+    <main class="container my-5">
+        <h2 class="section-title">Vamos Conversar?</h2>
         
         <div class="alert alert-success d-none" id="successMessage" role="alert">
             <h4 class="alert-heading">Mensagem enviada com sucesso!</h4>
