remove inline styles and change <div> to <p> in footer

--- a/index.html
+++ b/index.html
@@ -118,12 +118,12 @@
     </section>
 
     <footer>
-        <div class="bg-success bg-gradient d-flex justify-content-center text-white" style="height: 200px;">
-            <div class="align-self-center justify-content-center">
-                <img style="margin-left: 78px;" src="assets/images/logo.svg" alt="">
-                <div>
+        <div class="bg-success bg-gradient footer-container">
+            <div class="text-center">
+                <img class="footer-logo" src="assets/images/logo.svg" alt="">
+                <p class="footer-text">
                     Cultivando um futuro mais inclusivo
-                </div>
+                </p>
             </div>
         </div>
     </footer>
