--- a/contact-us.html
+++ b/contact-us.html
@@ -78,6 +78,17 @@
         </div>
     </main>
 
+    <footer>
+        <div class="bg-success bg-gradient footer-container">
+            <div class="text-center">
+                <img class="footer-logo" src="assets/images/logo.svg" alt="">
+                <p class="footer-text">
+                    Cultivando um futuro mais inclusivo
+                </p>
+            </div>
+        </div>
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/form.js"></script>
 </body>
