--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-white shadow sticky-top">
         <div class="container">
-            <a class="navbar-brand" href="/">
+            <a class="navbar-brand" href="#">
                 <img src="assets/images/logo_head.svg" alt="Logo">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -47,7 +47,7 @@
             <div class="row h-100 align-items-center position-relative">
                 <div class="col-12 col-lg-6 mb-4 mb-lg-0 text-white">
                     <p class="text-uppercase mb-4 letter-spacing">Transformamos vidas</p>
-                    <h1 class="display-4">Experiência única de desenvolvimento através do contato com a natureza</h1>
+                    <h1 class="display-4 ">Experiência única de desenvolvimento através do contato com a natureza</h1>
                 </div>
                 <div class="col-12 col-lg-6">
                     <div class="ratio ratio-16x9">
@@ -68,66 +68,82 @@
         <div class="row g-4">
             <!-- Card 1 -->
             <div class="col-12 col-sm-6 col-lg-3">
-                <div class="card">
-                    <img src="assets/images/sitio-feliz.svg" class="card-img-top" alt="Sítio Feliz">
-                    <div class="card-body">
-                        <h5 class="card-title">Sítio Feliz</h5>
-                        <p class="card-subtitle text-muted">Fazendinha</p>
-                        <p class="card-text">Um espaço lúdico e acolhedor onde crianças para descobrir o mundo rural e os animais da fazenda.</p>
-                        <a href="#" class="btn btn-primary">Agendar</a>
+                <a href="javascript:void(0)" onclick="mostrarAviso(event)" class="text-decoration-none">
+                    <div class="card">
+                        <img src="assets/images/sitio-feliz.svg" class="card-img-top" alt="Sítio Feliz">
+                        <div class="card-body">
+                            <h5 class="card-title">Sítio Feliz</h5>
+                            <p class="card-subtitle text-muted">Fazendinha</p>
+                            <p class="card-text">Um espaço lúdico e acolhedor onde crianças para descobrir o mundo rural e os animais da fazenda.</p>
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
             <!-- Card 2 -->
             <div class="col-12 col-sm-6 col-lg-3">
-                <div class="card">
-                    <img src="assets/images/rancho-azul.svg" class="card-img-top" alt="Rancho Azul">
-                    <div class="card-body">
-                        <h5 class="card-title">Rancho Azul</h5>
-                        <p class="card-subtitle text-muted">Equoterapia</p>
-                        <p class="card-text">Especializado em terapias com cavalos, aqui crianças desenvolvem coordenação e autoconfiança.</p>
-                        <a href="#" class="btn btn-primary">Agendar</a>
+                <a href="javascript:void(0)" onclick="mostrarAviso(event)" class="text-decoration-none">
+                    <div class="card">
+                        <img src="assets/images/rancho-azul.svg" class="card-img-top" alt="Rancho Azul">
+                        <div class="card-body">
+                            <h5 class="card-title">Rancho Azul</h5>
+                            <p class="card-subtitle text-muted">Equoterapia</p>
+                            <p class="card-text">Especializado em terapias com cavalos, aqui crianças desenvolvem coordenação e autoconfiança.</p>
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
             <!-- Card 3 -->
             <div class="col-12 col-sm-6 col-lg-3">
-                <div class="card">
-                    <img src="assets/images/recanto-rural.svg" class="card-img-top" alt="Recanto Rural">
-                    <div class="card-body">
-                        <h5 class="card-title">Recanto Rural</h5>
-                        <p class="card-subtitle text-muted">Platanção</p>
-                        <p class="card-text">Aqui você vai encontrar cultivo de hortas e jardins sensoriais, desenvolvendo várias habilidades.</p>
-                        <a href="#" class="btn btn-primary">Agendar</a>
+                <a href="javascript:void(0)" onclick="mostrarAviso(event)" class="text-decoration-none">
+                    <div class="card">
+                        <img src="assets/images/fazenda-do-lago.svg" class="card-img-top" alt="Fazenda do Lago">
+                        <div class="card-body">
+                            <h5 class="card-title">Recanto Rural</h5>
+                            <p class="card-subtitle text-muted">Platanção</p>
+                            <p class="card-text">Aqui você vai encontrar cultivo de hortas e jardins sensoriais, desenvolvendo várias habilidades.</p>
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
             <!-- Card 4 (Highlight) -->
             <div class="col-12 col-sm-6 col-lg-3">
-                <div class="card">
-                    <img src="assets/images/fazenda-do-lago.svg" class="card-img-top" alt="Fazenda do Lago">
-                    <div class="card-body">
-                        <h5 class="card-title">Fazenda do Lago</h5>
-                        <p class="card-subtitle text-muted">Hidroterapia</p>
-                        <p class="card-text">Terapias aquáticas com a vida rural, permitindo que as crianças se desenvolva no nosso lago.</p>
-                        <a href="#" class="btn btn-primary">Agendar</a>
+                <a href="javascript:void(0)" onclick="mostrarAviso(event)" class="text-decoration-none">
+                    <div class="card">
+                        <img src="assets/images/fazenda-do-lago.svg" class="card-img-top" alt="Fazenda do Lago">
+                        <div class="card-body">
+                            <h5 class="card-title">Fazenda do Lago</h5>
+                            <p class="card-subtitle text-muted">Hidroterapia</p>
+                            <p class="card-text">Terapias aquáticas com a vida rural, permitindo que as crianças se desenvolva no nosso lago.</p>
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
         </div>
     </section>
 
     <footer>
-        <div class="bg-success bg-gradient footer-container">
-            <div class="text-center">
-                <img class="footer-logo" src="assets/images/logo.svg" alt="">
-                <p class="footer-text">
+        <div class="bg-success bg-gradient d-flex justify-content-center text-white" style="height: 200px;">
+            <div class="align-self-center justify-content-center">
+                <img style="margin-left: 78px;" src="assets/images/logo.svg" alt="">
+                <div>
                     Cultivando um futuro mais inclusivo
-                </p>
+                </div>
             </div>
         </div>
     </footer>
 
+    <div class="toast-container position-fixed top-0 end-0 p-3">
+        <div id="disponibilidadeToast" class="toast align-items-center bg-warning border-0" role="alert" aria-live="assertive" aria-atomic="true">
+            <div class="d-flex">
+                <div class="toast-body text-dark">
+                    Esta propriedade estará disponível em breve!
+                </div>
+                <button type="button" class="btn-close me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+            </div>
+        </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/toast.js"></script>
 </body>
 </html>
